--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,12 +21,16 @@
 /*===========================
        01.COMMON css 
 ===========================*/
-@import url("https://fonts.googleapis.com/css?family=Josefin+Sans:300,400,600,700&display=swap");
+@font-face {
+  font-family: 'Alta';
+  src: url('../fonts/Alta_regular.otf');
+}
+
 body {
-  font-family: "Josefin Sans", sans-serif;
+  font-family: 'Alta';
   font-weight: normal;
   font-style: normal;
-  color: #747E88; }
+  color: #284159; }
 
 * {
   margin: 0;
@@ -68,7 +72,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: "Josefin Sans", sans-serif;
+  font-family: "Alta", sans-serif;
   font-weight: 700;
   color: #38424D;
   margin: 0px; }
@@ -100,7 +104,7 @@ p {
   font-size: 16px;
   font-weight: 400;
   line-height: 24px;
-  color: #747E88;
+  color: #284159;
   margin: 0px; }
 
 .bg_cover {
@@ -134,7 +138,7 @@ p {
   -ms-transition: all 0.4s ease-out 0s;
   -o-transition: all 0.4s ease-out 0s;
   transition: all 0.4s ease-out 0s;
-  background-color: #0898E7;
+  background-color: #471035;
   border-radius: 5px; }
   @media (max-width: 767px) {
     .main-btn {
@@ -143,22 +147,22 @@ p {
       line-height: 40px;
       font-size: 16px; } }
   .main-btn:hover {
-    background-color: rgba(8, 152, 231, 0.8);
+    background-color: #e9a31f;
     color: #fff; }
   .main-btn.main-btn-2 {
     background-color: #fff;
-    color: #0898E7;
-    border-color: #0898E7; }
+    color: #471035;
+    border-color: #471035; }
     .main-btn.main-btn-2:hover {
-      background-color: #0898E7;
-      border-color: #0898E7;
+      background-color: #471035;
+      border-color: #471035;
       color: #fff; }
 
 /*===== All Button Style =====*/
 .section_title .sub_title {
   font-size: 20px;
   font-weight: 700;
-  color: #0898E7; }
+  color: #471035; }
   @media (max-width: 767px) {
     .section_title .sub_title {
       font-size: 18px; } }
@@ -239,7 +243,7 @@ p {
       height: 100%;
       border-style: solid;
       /* Spinner Color */
-      border-color: #0898E7 #0898E7 #f7f7fd;
+      border-color: #471035 #471035 #f7f7fd;
       border-radius: 50%;
       border-width: 6px; }
     .preloader .loader .ytp-spinner-left .ytp-spinner-circle {
@@ -516,7 +520,7 @@ p {
   .navbar-toggler .toggler-icon {
     width: 30px;
     height: 2px;
-    background-color: #747E88;
+    background-color: #284159;
     display: block;
     margin: 5px 0;
     position: relative;
@@ -574,7 +578,7 @@ p {
     .navbar-nav .nav-item a {
       font-size: 18px;
       font-weight: 400;
-      color: #747E88;
+      color: #284159;
       -webkit-transition: all 0.3s ease-out 0s;
       -moz-transition: all 0.3s ease-out 0s;
       -ms-transition: all 0.3s ease-out 0s;
@@ -597,7 +601,7 @@ p {
         height: 3px;
         top: 1px;
         left: 0;
-        background-color: #0898E7;
+        background-color: #471035;
         -webkit-transition: all 0.3s ease-out 0s;
         -moz-transition: all 0.3s ease-out 0s;
         -ms-transition: all 0.3s ease-out 0s;
@@ -610,7 +614,7 @@ p {
           .navbar-nav .nav-item a::before {
             display: none; } }
     .navbar-nav .nav-item.active > a, .navbar-nav .nav-item:hover > a {
-      color: #0898E7; }
+      color: #471035; }
       .navbar-nav .nav-item.active > a::before, .navbar-nav .nav-item:hover > a::before {
         width: 100%; }
     .navbar-nav .nav-item:hover .sub-menu {
@@ -663,7 +667,7 @@ p {
           color: #222; }
           .navbar-nav .nav-item .sub-menu li a.active, .navbar-nav .nav-item .sub-menu li a:hover {
             padding-left: 25px;
-            color: #0898E7; }
+            color: #471035; }
   .navbar-nav .sub-nav-toggler {
     display: none; }
     @media only screen and (min-width: 768px) and (max-width: 991px) {
@@ -727,11 +731,12 @@ p {
   padding: 0 20px;
   height: 45px;
   line-height: 45px;
-  color: #0898E7;
+  color: #471035;
   background-color: transparent;
-  border: 2px solid #0898E7; }
+  border: 2px solid #471035; }
   .navbar-btn .main-btn:hover {
-    background-color: rgba(8, 152, 231, 0.3); }
+    background-color: #e9a31f;
+  color: #284159; }
 
 /*===== Slider =====*/
 .header_slider {
@@ -851,7 +856,7 @@ p {
   background: #fff;
   text-align: center;
   font-size: 56px;
-  color: #0898E7;
+  color: #471035;
   -webkit-box-shadow: 0px 3px 16px 0px rgba(8, 152, 231, 0.08);
   -moz-box-shadow: 0px 3px 16px 0px rgba(8, 152, 231, 0.08);
   box-shadow: 0px 3px 16px 0px rgba(8, 152, 231, 0.08);
@@ -882,11 +887,11 @@ p {
       .single_features .features_content .features_title a {
         font-size: 20px; } }
     .single_features .features_content .features_title a:hover {
-      color: #0898E7; }
+      color: #471035; }
   .single_features .features_content p {
     margin-top: 15px; }
 .single_features:hover .features_icon i {
-  background-color: #0898E7;
+  background-color: #471035;
   color: #fff; }
 
 /*===========================
@@ -921,7 +926,7 @@ p {
       font-size: 67px;
       line-height: 70px;
       font-weight: 700;
-      color: #0898E7; }
+      color: #471035; }
       @media (max-width: 767px) {
         .about_image .experiance span {
           font-size: 47px;
@@ -929,7 +934,7 @@ p {
     .about_image .experiance p {
       font-size: 27px;
       font-weight: 700;
-      color: #0898E7;
+      color: #471035;
       margin-top: 5px; }
       @media (max-width: 767px) {
         .about_image .experiance p {
@@ -999,7 +1004,7 @@ p {
     .single_services {
       padding: 30px 20px; } }
   .single_services .services_icon i {
-    color: #0898E7;
+    color: #471035;
     font-size: 56px;
     line-height: 60px;
     -webkit-transition: all 0.3s ease-out 0s;
@@ -1042,7 +1047,7 @@ p {
         .single_services .services_content p {
           font-size: 14px; } }
   .single_services:hover {
-    background-color: #0898E7; }
+    background-color: #471035; }
     .single_services:hover .services_icon i {
       color: #fff; }
     .single_services:hover .services_content .services_title a {
@@ -1054,7 +1059,7 @@ p {
         12.FOOTER css 
 ===========================*/
 .footer_area {
-  background-color: #F5FBFF; }
+  background-color: #e9a31f; }
 
 .footer_wrapper {
   position: relative; }
@@ -1080,7 +1085,7 @@ p {
     line-height: 52px;
     text-align: center;
     font-size: 16px;
-    color: #747E88;
+    color: #284159;
     background-color: rgba(34, 34, 34, 0.08);
     border-radius: 50%;
     -webkit-transition: all 0.3s ease-out 0s;
@@ -1089,7 +1094,7 @@ p {
     -o-transition: all 0.3s ease-out 0s;
     transition: all 0.3s ease-out 0s; }
     .footer_about .social li a:hover {
-      background-color: #0898E7;
+      background-color: #471035;
       color: #fff; }
 
 .footer_title {
@@ -1113,7 +1118,7 @@ p {
     .footer_link .link li {
       margin-top: 10px; }
       .footer_link .link li a {
-        color: #747E88;
+        color: #284159;
         font-size: 16px;
         -webkit-transition: all 0.3s ease-out 0s;
         -moz-transition: all 0.3s ease-out 0s;
@@ -1121,7 +1126,7 @@ p {
         -o-transition: all 0.3s ease-out 0s;
         transition: all 0.3s ease-out 0s; }
         .footer_link .link li a:hover {
-          color: #0898E7; }
+          color: #471035; }
 
 .footer_form .single_form {
   margin-top: 30px; }
@@ -1147,7 +1152,7 @@ p {
   height: 45px;
   line-height: 50px;
   border-radius: 5px;
-  background-color: #0898E7;
+  background-color: #471035;
   text-align: center;
   z-index: 99;
   -webkit-transition: all 0.3s ease-out 0s;
@@ -1158,6 +1163,6 @@ p {
   display: none; }
   .back-to-top:hover {
     color: #fff;
-    background-color: #0898E7; }
+    background-color: #471035; }
 
 /*# sourceMappingURL=style.css.map */
