--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -169,7 +169,8 @@ p {
 .section_title .title {
   font-size: 40px;
   font-weight: 700;
-  margin-top: 25px; }
+  margin-top: 25px;
+color: white; }
   @media only screen and (min-width: 992px) and (max-width: 1199px) {
     .section_title .title {
       font-size: 30px; } }
@@ -735,8 +736,8 @@ p {
   background-color: transparent;
   border: 2px solid #471035; }
   .navbar-btn .main-btn:hover {
-    background-color: #e9a31f;
-  color: #284159; }
+    background-color: #b59fae;
+ }
 
 /*===== Slider =====*/
 .header_slider {
@@ -877,7 +878,7 @@ p {
   .single_features .features_content .features_title a {
     font-size: 25px;
     font-weight: 600;
-    color: #38424D;
+    color: white;
     -webkit-transition: all 0.3s ease-out 0s;
     -moz-transition: all 0.3s ease-out 0s;
     -ms-transition: all 0.3s ease-out 0s;
@@ -889,7 +890,8 @@ p {
     .single_features .features_content .features_title a:hover {
       color: #471035; }
   .single_features .features_content p {
-    margin-top: 15px; }
+    margin-top: 15px; 
+  color: white;}
 .single_features:hover .features_icon i {
   background-color: #471035;
   color: #fff; }
@@ -1085,7 +1087,7 @@ p {
     line-height: 52px;
     text-align: center;
     font-size: 16px;
-    color: #284159;
+    color: white;
     background-color: rgba(34, 34, 34, 0.08);
     border-radius: 50%;
     -webkit-transition: all 0.3s ease-out 0s;
@@ -1099,7 +1101,8 @@ p {
 
 .footer_title {
   font-size: 25px;
-  font-weight: 600; }
+  font-weight: 600;
+color: white; }
   @media (max-width: 767px) {
     .footer_title {
       font-size: 20px; } }
@@ -1118,7 +1121,7 @@ p {
     .footer_link .link li {
       margin-top: 10px; }
       .footer_link .link li a {
-        color: #284159;
+        color: white;
         font-size: 16px;
         -webkit-transition: all 0.3s ease-out 0s;
         -moz-transition: all 0.3s ease-out 0s;
