arregla fuentes en link de whatsapp, cambia scrollbar y arregla position del footer

--- a/assets/css/whatsapp-chat.css
+++ b/assets/css/whatsapp-chat.css
@@ -103,7 +103,7 @@ body{
 }
 .ayoan_whatsapp_chatbox .widget-header .col-2 .header-content{
     font-size: 90%;
-    font-weight: 300;
+    font-weight: 500;
     letter-spacing: .3px;
     opacity: .8;
     line-height: 1.5;
@@ -193,7 +193,7 @@ body{
 }
 .ayoan_whatsapp_chatbox .widget-body .body-content .user-list .item .col-2 .list-content{
     font-size: 90%;
-    color: #aaa;
+    color: black;
     margin-bottom: 5px;
     width: 10rem;
 }
