--- a/assets/css/whatsapp-chat.css
+++ b/assets/css/whatsapp-chat.css
@@ -59,6 +59,7 @@ body{
     right: 20px;
     width: 320px;
     font-size: 14px;
+    z-index: 1;
 }
 .ayoan_whatsapp_chatbox_container .ayoan_whatsapp_chatbox{
     /*border: 1px solid #000;*/
